@@ -2,12 +2,10 @@
 #include "GormPrivate.h"
 
 #include <Foundation/NSUserDefaults.h>
-#include <AppKit/NSButton.h>
-#include <AppKit/NSTableView.h>
 #include <AppKit/NSWindow.h>
 #include <AppKit/NSNibLoading.h>
-#include <AppKit/NSOpenPanel.h>
-#include <AppKit/NSStringDrawing.h>
+
+@class NSTableView;
 
 // data source...
 @interface PaletteDataSource : NSObject
